[gd_scene load_steps=4 format=3 uid="uid://dhyyd16wk4g5x"]

[ext_resource type="Script" uid="uid://dshdib8npa6di" path="res://scripts/place_plank_interactable.gd" id="1_c5vad"]
[ext_resource type="Texture2D" uid="uid://c353qeknntk3c" path="res://assets/visuals/ART/GMTK game jam 25/floor planks optional.png" id="2_c5vad"]
[ext_resource type="PackedScene" uid="uid://lfwj3udiip6s" path="res://scenes/dialog_box.tscn" id="4_bpbkd"]

[node name="PlacePlankInteractable" type="Node2D"]
scale = Vector2(5.27103, 3.81552)
script = ExtResource("1_c5vad")

[node name="FirstSprite" type="Sprite2D" parent="."]
scale = Vector2(0.0504548, 0.0820883)
texture = ExtResource("2_c5vad")

[node name="DialogBox" parent="." instance=ExtResource("4_bpbkd")]
position = Vector2(-1.1383, 102.476)
rotation = -0.000650526
scale = Vector2(0.18154, 0.0308425)
dialog = Array[String](["Place Plank?"])

[node name="Yes" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="No" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
